[package]
name = "algs4-rs"
version = "0.1.0"
authors = ["simshi <simonshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "union_find"
path = "src/bin/union_find.rs"

[[bin]]
name = "symbol_graph"
path = "src/bin/symbol_graph.rs"

[dependencies]
rand = "0.3"
