[package]
name = "algs4-rs"
version = "0.1.0"
authors = ["simshi <simonshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "union_find"
path = "src/bin/union_find.rs"

[[bin]]
name = "symbol_graph"
path = "src/bin/symbol_graph.rs"

[[bench]]
name = "lang"
harness = false

[[bench]]
name = "lzw"
harness = false

[[bench]]
name = "sort"
harness = false

[dependencies]
rand = "0.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
